--- a/app/src/main/assets/car_viewer.html
+++ b/app/src/main/assets/car_viewer.html
@@ -1,57 +1,62 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1" />
-    <title>Car Viewer</title>
-    <style>
-      html, body {
-        width: 100%;
-        height: 100%;
-        margin: 0;
-        overflow: hidden;
-        background: #f5f5f5;
-        font-family: sans-serif;
-      }
-      #loading {
-        position: absolute;
-        inset: 0;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        color: #444;
-        font-size: 14px;
-      }
-      canvas {
-        display: block;
-      }
-    </style>
-  </head>
-  <body>
-    <div id="loading">Loading your car...</div>
-    <script type="module">
-      const params = new URLSearchParams(window.location.search);
-      const model = params.get("model") || "models/bluesedan.glb";
-      const color = params.get("color") || "#cccccc";
 
-      const loadingEl = document.getElementById("loading");
-      const loadingTimeout = window.setTimeout(() => {
-        loadingEl.textContent = "3D model is taking too long to load.";
-      }, 12000);
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1" />
+  <title>Car Viewer</title>
+  <style>
+    html,
+    body {
+      width: 100%;
+      height: 100%;
+      margin: 0;
+      overflow: hidden;
+      background: #f5f5f5;
+      font-family: sans-serif;
+    }
 
-      async function init() {
-        let THREE;
-        let OrbitControls;
-        let GLTFLoader;
-        try {
-          THREE = await import("https://appassets.androidplatform.net/assets/three.module.js");
-          ({ OrbitControls } = await import("https://appassets.androidplatform.net/assets/OrbitControls.js"));
-          ({ GLTFLoader } = await import("https://appassets.androidplatform.net/assets/GLTFLoader.js"));
-        } catch (error) {
-          window.clearTimeout(loadingTimeout);
-          loadingEl.textContent = `3D viewer failed to load: ${error}`;
-          return;
-        }
+    #loading {
+      position: absolute;
+      inset: 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: #444;
+      font-size: 14px;
+    }
+
+    canvas {
+      display: block;
+    }
+  </style>
+</head>
+
+<body>
+  <div id="loading">Loading your car...</div>
+  <script type="module">
+    const params = new URLSearchParams(window.location.search);
+    const model = params.get("model") || "models/bluesedan.glb";
+    const color = params.get("color") || "#cccccc";
+
+    const loadingEl = document.getElementById("loading");
+    const loadingTimeout = window.setTimeout(() => {
+      loadingEl.textContent = "3D model is taking too long to load.";
+    }, 12000);
+
+    async function init() {
+      let THREE;
+      let OrbitControls;
+      let GLTFLoader;
+      try {
+        THREE = await import("https://appassets.androidplatform.net/assets/three.module.js");
+        ({ OrbitControls } = await import("https://appassets.androidplatform.net/assets/OrbitControls.js"));
+        ({ GLTFLoader } = await import("https://appassets.androidplatform.net/assets/GLTFLoader.js"));
+      } catch (error) {
+        window.clearTimeout(loadingTimeout);
+        loadingEl.textContent = `3D viewer failed to load: ${error}`;
+        return;
+      }
 
       const scene = new THREE.Scene();
       scene.background = new THREE.Color(0xf5f5f5);
@@ -136,9 +141,10 @@
         camera.updateProjectionMatrix();
         renderer.setSize(width, height);
       });
-      }
+    }
 
-      init();
-    </script>
-  </body>
+    init();
+  </script>
+</body>
+
 </html>
